--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -82,7 +82,7 @@
             </div>
 
             <div class="col-md-6">
-                <h4>Ja nu</h4>
+                &nbsp;
             </div>
         </div>
         <!-- ./ACCOUNT SETTINGS AREA -->
