--- a/resources/views/Category/Content/CategoryContent.twig
+++ b/resources/views/Category/Content/CategoryContent.twig
@@ -1,1 +1,20 @@
-<!-- Insert markup for content category template here -->
+{% extends getPartial('page-design') %}
+
+{% block PartialHead %}
+    <title>{{ category.details[0].metaTitle }} | {{ ceresConfig.header.companyName }}</title>
+
+    <meta name="description" content="{{ category.details[0].metaDescription }}">
+    <meta name="keywords" content="{{ category.details[0].metaKeywords }}">
+
+    <meta name="robots" content="{{ metaRobots }}">
+{% endblock %}
+
+{% block PageBody %}
+  <div class="container-max page-content">
+      <div class="row">
+          <div class="col-xs-12 m-b-3">
+            {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
+          </div>
+      </div>
+  </div>
+{% endblock %}
