--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -79,7 +79,10 @@
                                             {{ cat.details.first.name }}</a>
                                     </li>
                                 {% endif %}
-
+                                {% if i is 3 %}
+                                    <li>Pansensuppe</li>
+                                    <li>Saures Lungerl</li>
+                                {% endif %}
                             {% endfor %}
 
                         </ul>
