Footer Test Social list

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -81,7 +81,10 @@
                                 {% endif %}
 
                             {% endfor %}
-
+                            {% if i is 3 %}
+                              <li>Pansensupper</li>
+                              <li>Saures Lungerl</li>
+                            {% endif %}
                         </ul>
                     </nav>
                 </div>
