--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -79,8 +79,8 @@
                                             {{ cat.details.first.name }}</a>
                                     </li>
                                 {% else %}
-                                  <li><a href="#" id="socialfb" target="_blank">Facebook</a></li>
-                                  <li><a href="#" id="socialig" target="_blank">Instagram</a></li>
+                                  <li><a href="{{ return redirect()->away('https://www.facebook.com/darkages.de') }}" id="socialfb" target="_blank">Facebook</a></li>
+                                  <li><a href="{{ return redirect()->away('https://www.instagram.com/krazy8.headshop') }}" id="socialig" target="_blank">Instagram</a></li>
                                 {% endif %}
                             {% endfor %}
                         </ul>
