--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -78,6 +78,7 @@
                                         <a href="{{ services.category.getURL( cat ) }}">
                                             {{ cat.details.first.name }}</a>
                                     </li>
+                                {% endif %}
                             {% endfor %}
                             <li><a href="https://www.facebook.com/darkages.de" id="socialfb" target="_blank">Facebook</a></li>
                             <li><a href="https://www.instagram.com/krazy8.headshop" id="socialig" target="_blank">Instagram</a></li>
