--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -79,7 +79,7 @@
                                             {{ cat.details.first.name }}</a>
                                     </li>
                                 {% endif %}
-                                {% if cat is null %}
+                                {% if catID is null %}
                                   <li><a href="https://www.facebook.com/krazy8.headshop" id="socialfb" target="_blank">Facebook</a></li>
                                   <li><a href="https://www.instagram.com/krazy8.headshop" id="socialig" target="_blank">Instagram</a></li>
                                 {% endif %}
