--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -81,6 +81,6 @@
 
 {{ LayoutContainer.show("Ceres::Template.StyleOverwrite") }}
 
-{# {{ LayoutContainer.show("Ceres::Template.Style") }} #}
+{{ LayoutContainer.show("Ceres::Template.Style") }}
 
 {{ get_shop_builder_styles() }}
