edit css for responsive header logo

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -3793,8 +3793,7 @@ input[type="button"].btn-block {
   font-size: 3.25rem;
   line-height: 1;
   background: none;
-  border: 1px solid transparent;
-  border-radius: 0.1rem;
+  border: 0px;
   color: #61fe01;
 }
 
@@ -12451,9 +12450,10 @@ a.cookie-bar__link{
 
 @media (max-width: 991px) {
   .top-bar .controls-list > li a:not(.btn) {
-    padding: 0.5rem .5rem;
+    padding: 0.5rem .3rem;
     display: inline-block;
     color: #000000;
+    white-space: nowrap;
   }
   .top-bar .controls-list > li a:not(.btn)[aria-expanded="true"] {
     background-color: #008ebd;
@@ -12740,6 +12740,12 @@ a.cookie-bar__link{
 
 .navbar-brand img {
   max-height: 10rem;
+}
+
+@media (max-width:425px) {
+ .navbar-brand img {
+   max-width: 70%;
+ }
 }
 
 .navbar-nav .nav-item {
