+iconsprite.png +class:icon-sprite in css and Footer.twig

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -9351,6 +9351,16 @@ a.text-danger:focus, a.text-danger:hover {
   background-image: url(../images/flags/1x1/un.svg);
 }
 
+.icon-sprite {
+  background-image: url(../images/iconsprite.png);
+  background-repeat: no-repeat;
+  position: relative;
+  vertical-align: middle;
+  line-height: 1;
+  display: inline-block;
+  text-indent: 9999px;
+}
+
 .square-container {
   position: relative;
   display: block;
