--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -81,8 +81,8 @@
                                 {% endif %}
                             {% endfor %}
                             {% if i == 3 %}
-                              <li><a href="https://www.facebook.com/krazy8.headshop" id="socialfb" target="_blank">Krazy8 @ Facebook</a></li>
-                              <li><a href="https://www.instagram.com/krazy8.headshop" id="socialig" target="_blank">Krazy8 @ Instagram</a></li>
+                              <li><a href="https://www.facebook.com/krazy8.headshop" id="socialfb" class="icon-sprite" target="_blank">Krazy8 @ Facebook</a></li>
+                              <li><a href="https://www.instagram.com/krazy8.headshop" id="socialig" class="icon-sprite" target="_blank">Krazy8 @ Instagram</a></li>
                             {% endif %}
                         </ul>
                     </nav>
