--- a/resources/views/Containers/ItemLists/ItemList1.twig
+++ b/resources/views/Containers/ItemLists/ItemList1.twig
@@ -1,11 +1,1 @@
-<ul>
-    <li>
-        punkt 1
-    </li>
-    <li>
-        punkt 2
-    </li>
-    <li>
-        punkt 3
-    </li>
-</ul>
+<!-- Insert markup for first item list here -->
