add content (divs and classes) in PaymentMethod.twig, ShippingMethods.twig, CertifiedBy.twig

--- a/resources/views/Containers/FooterServices/CertifiedBy.twig
+++ b/resources/views/Containers/FooterServices/CertifiedBy.twig
@@ -1,1 +1,10 @@
-<div>Certified By...</div>
+<div class="footer-certifiedby">
+  <ul>
+    <li>
+      <div class="icon-sprite" id="ssl">&nbsp;</div>
+    </li>
+    <li>
+      <div class="icon-sprite" id="ppks">&nbsp;</div>
+    </li>
+  </ul>
+</div>
