--- a/resources/views/Containers/FooterServices/PaymentMethods.twig
+++ b/resources/views/Containers/FooterServices/PaymentMethods.twig
@@ -1,11 +1,20 @@
-<ul>
-  <li>
-    Payment Method1
-  </li>
-  <li>
-    Payment Method2
-  </li>
-  <li>
-    Payment Method3
-  </li>
-</ul>
+<div class="footer-payment-methods">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="su">
+        &nbsp;
+    </div>
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="pp">
+        &nbsp;
+    </div>
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="ls">
+        &nbsp;
+    </div>
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="re">
+        &nbsp;
+    </div>
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="kk">
+        &nbsp;
+    </div>
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="vk">
+        &nbsp;
+    </div>
+</div>
