--- a/resources/views/Containers/FooterServices/ShippingMethods.twig
+++ b/resources/views/Containers/FooterServices/ShippingMethods.twig
@@ -1,11 +1,5 @@
-<ul>
-  <li>
-    Shipping Method1
-  </li>
-  <li>
-    Shipping Method2
-  </li>
-  <li>
-    Shipping Method3
-  </li>
-</ul>
+<div class="footer-shipping-methods">
+  <div class="icon-sprite col-xs-12" id="dhl">
+      &nbsp;
+  </div>
+</div>
