--- a/resources/views/Containers/FooterServices/CertifiedBy.twig
+++ b/resources/views/Containers/FooterServices/CertifiedBy.twig
@@ -1,10 +1,10 @@
 <div class="footer-certifiedby">
   <ul>
     <li>
-      <div class="icon-sprite" id="ssl">&nbsp;</div>
+      <div class="icon-sprite" id="ssl" title="SSL 256bit Verschlüsselung im elektronischen Bestellprozess">&nbsp;</div>
     </li>
     <li>
-      <div class="icon-sprite" id="ppks">&nbsp;</div>
+      <div class="icon-sprite" id="ppks" title="Käuferschutz bei Zahlung via PayPal">&nbsp;</div>
     </li>
   </ul>
 </div>
