--- a/resources/views/Containers/FooterServices/PaymentMethods.twig
+++ b/resources/views/Containers/FooterServices/PaymentMethods.twig
@@ -1,20 +1,20 @@
 <div class="footer-payment-methods">
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="su">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="su" title="Klarna Sofortüberweisung">
         &nbsp;
     </div>
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="pp">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="pp" title="PayPal">
         &nbsp;
     </div>
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="ls">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="ls" title="Lastschrift">
         &nbsp;
     </div>
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="re">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="re" title="Rechnungskauf">
         &nbsp;
     </div>
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="kk">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="kk" title="Kreditkarte">
         &nbsp;
     </div>
-    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="vk">
+    <div class="icon-sprite col-lg-2 col-sm-4 col-xs-6" id="vk" title="Vorkasse">
         &nbsp;
     </div>
 </div>
