--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -32,7 +32,7 @@
 
     <div class="container-max footer-content">
         <div class="row">
-            <div class="footer-services m-t-2">
+            <div class="footer-services">
                 <div class="col-xs-12 col-sm-12 col-lg-4">
                     {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
                     {% if paymentMethodContent|trim is not empty %}
