--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -53,14 +53,14 @@
 
         <div id="page-body" class="main">
             {% if services.template.isCategory() == "1" %}
-              {% if services.template.categoryType() == "content" %}
+              {% if services.template.categoryType() != "content" %}
                 <div class="page-content container-max">
               {% endif %}
             {% endif %}
                 {% block PageBody %}
                     <!-- inject content of inherited templates here -->
                 {% endblock %}
-            {% if services.template.categoryType() == "content" %}
+            {% if services.template.categoryType() != "content" %}
                 </div>
             {% endif %}
         </div>
