fix css footer to bottom

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -534,6 +534,9 @@ h1, h2, h3, h4, h5, h6,
   line-height: 1.1;
   /* color: inherit; */
   text-transform:  uppercase;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: manual;
 }
 
 h1, .h1 {
@@ -10284,8 +10287,8 @@ a:active {
 
 @media (min-width: 1200px) {
   .page-content {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .page-content.basket, .page-content.checkout, .page-content.contact, .page-content.myaccount {
     padding-left: 15px;
@@ -10342,6 +10345,8 @@ body > #vue-app .wrapper-main,
 body > #vue-error .wrapper-main {
   position: relative;
   min-height: 100%;
+  display: flex;
+  flex-direction:column;
 }
 
 body > #vue-app .wrapper-top,
@@ -12651,6 +12656,7 @@ a.cookie-bar__link{
 
 .wrapper-main #page-body {
   margin: 10px auto 25px;
+  width: 100%;
 }
 
 @media (max-width:470px) {
@@ -13759,10 +13765,11 @@ body.menu-is-visible {
   display: block;
   background-color: #000000;
   color: #61fe01;
-  /* position: absolute; */
   width:  100%;
   bottom: 0;
   left: 0;
+  margin-top: auto;
+  min-height: 375px;
 }
 
 .footer hr {
