Load content from shopBuilder to homepage.twig Delete margin from <hr> in footer

--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -5,5 +5,11 @@
 	<!-- Insert markup for homepage here -->
 
     <h1>My homepage</h1>
+    {% if config("Ceres.homepage.showShopBuilderContent") == "true" or request.get('isContentBuilder') == 1 %}
 
+        {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
+            {{ content.result | raw }}
+        {% endfor %}
+
+    {% endif %}
 {% endblock %}
