add shopbuilder layout container to footer

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -6,6 +6,7 @@
 {% set numberOfFeatures = config('Ceres.footer.number_of_features') %}
 {% set topButtonPosition = config('Ceres.footer.to_top_button') %}
 
+
 <div class="footer">
 
     <div class="{% if topButtonPosition == "right" %}back-to-top{% else %}back-to-top-center{% endif %} hidden-sm-down">
@@ -136,3 +137,6 @@
         </div>
     </div>
 </div>
+
+{% set footerContainer = LayoutContainer.show("Ceres::Footer") | trim %}
+{{ footerContainer | raw }}
