--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -2,9 +2,9 @@
 
 {% block PageBody %}
 
-	<!-- Insert markup for homepage here -->
-
-    <h1>My homepage</h1>
+<div class="container-max page-content">
+    <div class="row">
+        <div class="col-xs-12 m-b-3">
     {% if config("Ceres.homepage.showShopBuilderContent") == "true" or request.get('isContentBuilder') == 1 %}
 
         {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
@@ -12,4 +12,7 @@
         {% endfor %}
 
     {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
