--- a/resources/views/Item/SingleItemView.twig
+++ b/resources/views/Item/SingleItemView.twig
@@ -37,4 +37,20 @@
           		</div>
     	{% endif %}
    </div>
+   <div slot="CrossSellingSimilar">
+     {% if similar|length > 0 %}
+               <div class="crossSelling">
+                 <span class="h3">Das könnte Dir auch gefallen:</span>
+                 <container-item-list :items="null"></container-item-list>
+             </div>
+     {% endif %}
+  </div>
+  <div slot="CrossSellingReplacementPart">
+    {% if replacementpart|length > 0 %}
+              <div class="crossSelling">
+                <span class="h3">Das passt dazu:</span>
+                <container-item-list :items="null"></container-item-list>
+            </div>
+    {% endif %}
+ </div>
 </single-item>
