--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -273,7 +273,8 @@
 
             <slot name="ItemListContainer"></slot>
             <slot name="CrossSellingAccessory"></slot>
-            
+            <slot name="CrossSellingReplacementPart"></slot>
+            <slot name="CrossSellingSimilar"></slot>
             <slot name="FeedbackContainer"></slot>
         </div>
     </div>
