--- a/resources/views/Item/SingleItemView.twig
+++ b/resources/views/Item/SingleItemView.twig
@@ -33,7 +33,7 @@
     	{% if accessory|length > 0 %}
             		<div class="crossSelling">
             			<span class="h3">Passendes Zubehör:</span>
-            			<container-item-list :items="null"></container-item-list>
+            			<container-item-list :items="{{ accessory| json_encode }}"></container-item-list>
           		</div>
     	{% endif %}
    </div>
@@ -41,7 +41,7 @@
      {% if similar|length > 0 %}
                <div class="crossSelling">
                  <span class="h3">Das könnte Dir auch gefallen:</span>
-                 <container-item-list :items="null"></container-item-list>
+                 <container-item-list :items="{{ similar| json_encode }}"></container-item-list>
              </div>
      {% endif %}
   </div>
@@ -49,7 +49,7 @@
     {% if replacementpart|length > 0 %}
               <div class="crossSelling">
                 <span class="h3">Das passt dazu:</span>
-                <container-item-list :items="null"></container-item-list>
+                <container-item-list :items="{{ replacementpart| json_encode }}"></container-item-list>
             </div>
     {% endif %}
  </div>
