--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -24,7 +24,7 @@
 
                     <h1 class="h2 title">
                         <span>
-                            ${ currentVariation | itemName }
+                            ${ currentVariation | itemName }ULLEBULLE
                         </span>
                     </h1>
 
