--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -49,10 +49,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="list-wrapper">
-                            <item-list-sorting template="#vue-item-list-sorting" :sorting-list="{{ searchOptions.sorting | json_encode }}" :default-sorting="{{ searchOptions.defaultSorting | json_encode }}"></item-list-sorting>
-                            <items-per-page
-                                template="#vue-items-per-page"
-                                :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}"></items-per-page>
+                            {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+                            {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
                             {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets ) %}
                             {% if overrideSearchFilters | trim is empty %}
                                 <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
@@ -71,7 +69,7 @@
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
                     </noscript>
@@ -119,7 +117,7 @@
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
             <div class="list-controls m-b-3 row">
                 <div class="col-xs-12">
-                    <pagination template="#vue-pagination"></pagination>
+                    {% include "Ceres::Category.Item.Partials.Pagination" %}
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
                     </noscript>
