add script to header.twig to prevent elements behind header

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -24,6 +24,20 @@
 </header>
 {% endif %}
 
+{% set scriptId = uid() %}
+<script id="{{ scriptId }}">
+    var vueApp = document.getElementById("vue-app");
+    var pageHeader = document.getElementById("page-header");
+
+    if ( !!vueApp && !!pageHeader )
+    {
+        vueApp.style.marginTop = pageHeader.getBoundingClientRect().height + 'px';
+    }
+
+    var scriptElement = document.getElementById("{{ scriptId }}");
+    scriptElement.parentElement.removeChild(scriptElement);
+</script>
+
 <div>
     {% if category.linklist == "Y" %}
         {% set initialCategory = { id: category.id } %}
