--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -13,7 +13,7 @@
         <i class="fa fa-chevron-up"></i>
     </div>
 
-    <div class="to-top hidden-md-up" v-scroll-to-top>
+    <div class="to-top d-md-none" v-scroll-to-top>
         <i class="fa fa-arrow-up" aria-hidden="true"></i>
     </div>
 
@@ -21,7 +21,7 @@
         <div class="footer-features p-y-1 container-max">
             <div class="row">
                 {% for i in 1..numberOfFeatures %}
-                    <div class="col-xs-12 col-sm-4 text-xs-center">
+                    <div class="col-12 col-sm-4 text-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                         {{ trans('Ceres::Template.footerStoreFeature' ~ i) }}
                     </div>
@@ -34,7 +34,7 @@
     <div class="container-max footer-content">
         <div class="row">
             <div class="footer-services">
-                <div class="col-xs-12 col-sm-12 col-lg-4">
+                <div class="col-12 col-sm-12 col-lg-4">
                     {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
                     {% if paymentMethodContent|trim is not empty %}
                         <div class="services-payment m-b-1">
@@ -43,7 +43,7 @@
                         </div>
                     {% endif %}
                 </div>
-                <div class="col-xs-6 col-sm-6 col-lg-4">
+                <div class="col-6 col-sm-6 col-lg-4">
                     {% set shippingContent = LayoutContainer.show("Ceres::Homepage.Shipping") %}
                     {% if shippingContent|trim is not empty %}
                         <div class="services-shipping m-b-1">
@@ -52,7 +52,7 @@
                         </div>
                     {% endif %}
                 </div>
-                <div class="col-xs-6 col-sm-6 col-lg-4">
+                <div class="col-6 col-sm-6 col-lg-4">
                     {% set certifiedContent = LayoutContainer.show("Ceres::Homepage.Certified") %}
                     {% if certifiedContent|trim is not empty %}
                         <div class="services-certificate m-b-1">
@@ -67,7 +67,7 @@
         <div class="row">
             <hr>
             {% for i in 1..numberOfCols %}
-                <div class="col-xs-6 col-sm-4 col-lg-4">
+                <div class="col-6 col-sm-4 col-lg-4">
                     <nav class="footer-column m-b-2">
                         <h2 class="h5">{{ trans('Ceres::Template.footerColumnTitle' ~ i) }}</h2>
                         <ul class="list-unstyled">
@@ -93,19 +93,19 @@
                     </nav>
                 </div>
             {% endfor %}
-            <hr class="hidden-sm-up m-y-2">
-            <div class="col-xs-6 col-sm-3">
+            <hr class="d-sm-none m-y-2">
+            <div class="col-6 col-sm-3">
                 <div class="footer-column">
                     {{ LayoutContainer.show("Ceres::Footer.RowOne") }}
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-12 col-sm-3">
                 <div class="footer-column row">
                     {% set rowTwo = LayoutContainer.show("Ceres::Footer.RowTwo") %}
 
                     {{ rowTwo }}
 
-                    <div class="col-xs-12{% if rowTwo|trim is not empty %} col-sm-6 col-lg-12{% endif %}">
+                    <div class="col-12{% if rowTwo|trim is not empty %} col-sm-6 col-lg-12{% endif %}">
                         {{ LayoutContainer.show("Ceres::Footer.RowThree") }}
                     </div>
                 </div>
@@ -113,7 +113,7 @@
         </div>
 
         {% set cat = services.category.get(config('Ceres.global.category.legal_disclosure')) %}
-        <div class="copyright text-xs-center m-y-1">
+        <div class="copyright text-center m-y-1">
             <div class="static-link-list">
                 {% autoescape false %}
                     <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
